# TODOLIST_FASTAPI

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
frontend/: index.html  script.js  style.css
tests/: test_app.py
todolist_fastapi/: app.py
