[tool.poetry]
name = "todolist-fastapi"
version = "0.1.0"
description = ""
authors = ["rafaelpllopes <rafael.pllopes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.115.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.4"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
taskipy = "^1.14.1"

[tool.pytest.ini._options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
run = 'fastapi dev todolist_fastapi/app.py'

pre_test = 'task lint'
test = 'pytest --cov=todolist_fastapi -vv'
post_test = 'covarage html'

lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"